--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,16 +24,17 @@ jobs:
       - name: Build the project
         run: npm run build
 
-      - name: Add server to known_hosts
-        run: ssh-keyscan -H 170.64.154.237 >> ~/.ssh/known_hosts
-
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.SERVER_SSH_KEY }}
 
-      - name: Deploy files via SCP
-        run: |
-          rsync -avz --delete-after ./build/ master_kuuxjudwmu@170.64.154.237:/home/master/applications/ajxhjxagtg/public_html
+      - name: SCP files via ssh key
+        uses: appleboy/scp-action@master
         env:
-          SSH_KNOWN_HOSTS: 170.64.154.237
+          USERNAME: ${{ secrets.USERNAME }}
+          HOST: ${{ secrets.HOST }}
+          KEY: ${{ secrets.SERVER_SSH_KEY }}
+        with:
+          source: './*'
+          target: '/home/ubuntu/flatbread/'
