--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,7 @@ jobs:
           USERNAME: ${{ secrets.USERNAME }}
           HOST: ${{ secrets.HOST }}
           KEY: ${{ secrets.SERVER_SSH_KEY }}
+          PASSWORD: ${{ secrets.PASSWORD }}
         with:
           source: './*'
           target: '/home/ubuntu/flatbread/'
