--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16' # Specify the version of Node.js you need
+          node-version: '16'
 
       - name: Install dependencies
         run: npm install
@@ -24,18 +24,11 @@ jobs:
       - name: Build the project
         run: npm run build
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.SERVER_SSH_KEY }}
-
       - name: SCP files via ssh key
         uses: appleboy/scp-action@master
-        env:
-          USERNAME: ${{ secrets.USERNAME }}
-          HOST: ${{ secrets.HOST }}
-          KEY: ${{ secrets.SERVER_SSH_KEY }}
-          PASSWORD: ${{ secrets.PASSWORD }}
         with:
-          source: './*'
-          target: '/home/ubuntu/flatbread/'
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          source: './build/*'  
+          target: '/home/master/applications/ajxhjxagtg/public_html' 
