--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,11 +24,14 @@ jobs:
       - name: Build the project
         run: npm run build
 
+      - name: List dist directory contents
+        run: ls -la ./dist
+        
       - name: SCP files via ssh key
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          source: './build/*'  
-          target: '/home/master/applications/ajxhjxagtg/public_html' 
+          source: './dist/*'
+          target: '/home/master/applications/ajxhjxagtg/public_html'
